Fixed alignment in parallax

--- a/css/main.scss
+++ b/css/main.scss
@@ -288,6 +288,7 @@ h2 {
     box-shadow: inset 0px -5px 5px -5px rgba(0,0,0,0.75);
     .container-fluid{
         position:absolute;
+        left: 2.5vw;
         img{
             display:block;
             position:relative;
